--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,30 +1,53 @@
-.container{
-    font-family: 'Encode Sans Expanded', sans-serif;    
-    
+.container {
+  font-family: 'Encode Sans Expanded', sans-serif;
+
 }
 
-#searchButton, #searchAgainButton {
-    width: 50%;
-    background-color: #00bf63;
-   }
-   
- 
-   .custom-background {
-    background-color: #efebe5;
-  }
- 
-  #app-logo{
-    padding-top: 50px;
-  }
- 
- #results-card{
- 
-    padding-top: 100px;
-   
-   
-  
- }
- 
- #placeholder1{
-   padding-top: 75px;
- }
+#searchButton,
+#searchAgainButton {
+  width: 50%;
+  background-color: #00bf63;
+}
+
+
+.custom-background {
+  background-color: #efebe5;
+}
+
+#app-logo {
+  padding-top: 50px;
+}
+
+#results-card {
+
+  padding-top: 100px;
+
+
+
+}
+
+#placeholder1 {
+  padding-top: 75px;
+}
+
+/* nav bar */
+.nav-wrapper {
+  background-color: rgb(37, 7, 7);
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+img {
+  width: 270px;
+  height: auto;
+  margin: 0;
+  padding-left: 10px;
+
+}
+
+.waves-effect {
+  background-color: black;
+  color: aliceblue;
+  justify-content: space-between;
+}
