Added addtional media images. Changed nav bar interface. Added conditional statement to check for blank searches

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -16,9 +16,7 @@
   padding-top: 50px;
 }
 
-#results-card {
-  padding-top: 100px;
-}
+
 
 #placeholder1 {
   padding-top: 75px;
@@ -26,7 +24,7 @@
 
 /* nav bar */
 .nav-wrapper {
-  background-color: rgb(37, 7, 7);
+  background-color:  #ff3131;
   justify-content: space-between;
   align-items: center;
 
@@ -36,4 +34,17 @@
   background-color: black;
   color: aliceblue;
   justify-content: space-between;
+}
+
+
+#results-card{
+
+   padding-top: 100px;
+  
+  
+ 
+}
+
+@media screen and (max-width: 992px) {
+
 }
